bin/testsuite/tests/compiler/src/errors/compiler4960.swg
#global testerror "Err0488"
#test
{
    a[0 until ]
}